--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/annaluzserena/terpo#readme",
   "dependencies": {
+    "@splidejs/splide": "^4.1.4",
     "bcryptjs": "^2.4.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
